Added CORS: open to everywhere

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ tensorflow==2.10.0
 tensorflow-hub==0.13.0
 requests==2.31.0
 Werkzeug==2.3.4
+flask-cors
 
 # py==1.10.0
 # tensorflow-estimator==2.10.0
